--- a/index.html
+++ b/index.html
@@ -162,49 +162,53 @@
     </footer>
     <script>
         const modoSol = document.getElementById('modoSol');
-const modoLuna = document.getElementById('modoLuna');
-const body = document.body;
+        const modoLuna = document.getElementById('modoLuna');
+        const body = document.body;
 
-// Verifica si hay una preferencia guardada en localStorage
-const modoGuardado = localStorage.getItem('modoNoche');
-if (modoGuardado === 'activado') {
-    body.classList.add('modo-noche');
-    modoSol.style.display = 'none';
-    modoLuna.style.display = 'inline';
-}
-
-// Escucha el clic en los emojis
-modoSol.addEventListener('click', () => {
-    body.classList.add('modo-noche');
-    modoSol.style.display = 'none';
-    modoLuna.style.display = 'inline';
-    localStorage.setItem('modoNoche', 'activado');
-    console.log("Modo Noche Activado");
-});
-
-modoLuna.addEventListener('click', () => {
-    body.classList.remove('modo-noche');
-    modoSol.style.display = 'inline';
-    modoLuna.style.display = 'none';
-    localStorage.setItem('modoNoche', 'desactivado');
-    console.log("Modo Día Activado");
-});
-document.addEventListener("DOMContentLoaded", function () {
-        const menuToggle = document.querySelector(".menu-toggle");
-        const navList = document.querySelector(".nav-list");
-        
-        menuToggle.addEventListener("click", function () {
-            navList.classList.toggle("active");
-        });
-    });
-    window.addEventListener('scroll', function() {
-        var header = document.querySelector('.header');
-        if (window.scrollY > 50) {
-            header.classList.add('sticky');
-        } else {
-            header.classList.remove('sticky');
+        // Verifica si hay una preferencia guardada en localStorage
+        const modoGuardado = localStorage.getItem('modoNoche');
+        if (modoGuardado === 'activado') {
+            body.classList.add('modo-noche');
+            modoSol.style.display = 'none';
+            modoLuna.style.display = 'inline';
         }
-    });
+
+        // Escucha el clic en los emojis
+        modoSol.addEventListener('click', () => {
+            body.classList.add('modo-noche');
+            modoSol.style.display = 'none';
+            modoLuna.style.display = 'inline';
+            localStorage.setItem('modoNoche', 'activado');
+            console.log("Modo Noche Activado");
+        });
+
+        modoLuna.addEventListener('click', () => {
+            body.classList.remove('modo-noche');
+            modoSol.style.display = 'inline';
+            modoLuna.style.display = 'none';
+            localStorage.setItem('modoNoche', 'desactivado');
+            console.log("Modo Día Activado");
+        });
+
+        document.addEventListener("DOMContentLoaded", function () {
+            const menuToggle = document.querySelector(".menu-toggle");
+            const navList = document.querySelector(".nav-list");
+            
+            menuToggle.addEventListener("click", function () {
+                navList.classList.toggle("active");
+            });
+        });
+
+        window.addEventListener('scroll', function() {
+            var header = document.querySelector('.header');
+            if (window.innerWidth <= 768) {
+                if (window.scrollY > 50) {
+                    header.classList.add('sticky');
+                } else {
+                    header.classList.remove('sticky');
+                }
+            }
+        });
     </script>
 </body>
 </html>
