--- a/index.html
+++ b/index.html
@@ -78,29 +78,29 @@
         </div>
     </section>
 
-    <!-- Sección de Servicios -->
-    <section id="servicios" class="servicios">
-        <div class="container">
-            <h2>Nuestros Servicios</h2>
-            <div class="grid">
-                <div class="card">
-                    <div class="card-image"></div>
-                    <h3>Tratamientos Faciales</h3>
-                    <p>Revitaliza tu piel con nuestros tratamientos expertos.</p>
-                </div>
-                <div class="card">
-                    <div class="card-image"></div>
-                    <h3>Masajes Relajantes</h3>
-                    <p>Relájate y rejuvenece con nuestras terapias de masaje.</p>
-                </div>
-                <div class="card">
-                    <div class="card-image"></div>
-                    <h3>Depilación Profesional</h3>
-                    <p>Técnicas avanzadas para una piel suave y sin vello.</p>
-                </div>
+   <!-- Sección de Servicios -->
+<section id="servicios" class="servicios">
+    <div class="container">
+        <h2>Nuestros Servicios</h2>
+        <div class="grid">
+            <div class="card">
+                <div class="card-image"></div>
+                <h3>Corte para pelo</h3>
+                <p>Obtén un look fresco y moderno con cortes profesionales.</p>
+            </div>
+            <div class="card">
+                <div class="card-image"></div>
+                <h3>Rizado de pestañas</h3>
+                <p>Resalta tu mirada con un rizado de pestañas duradero y natural.</p>
+            </div>
+            <div class="card">
+                <div class="card-image"></div>
+                <h3>Depilación Profesional</h3>
+                <p>Técnicas avanzadas para una piel suave y sin vello.</p>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Sección Sobre Nosotros -->
     <section class="about">
