--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="grid">
             <div class="card">
                 <div class="card-image"></div>
-                <h3>Corte para pelo</h3>
+                <h3>Corte para cabello</h3>
                 <p>Obtén un look fresco y moderno con cortes profesionales.</p>
             </div>
             <div class="card">
