--- a/index.html
+++ b/index.html
@@ -131,18 +131,13 @@
                 <a href="https://wa.me/529993553257" target="_blank">
                     <li class="contact-item">
                         <img src="recursos/whats.png" alt="WhatsApp" class="whatsapp-icon">
-                        WhatsApp: 9993553257
+                        WhatsApp
                     </li>
                 </a>
                 <a href="tel:+529993553257" class="cta-call-button">
-                    <i class="fa-solid fa-phone"></i> Llamar Ahora
+                    <i class="fa-solid fa-phone"></i> ¡Llamar Ahora y agenda tu cita ahora!
                 </a>
             </ul>
-            <div class="cta-button-container">
-                <a href="mailto:laradave374@gmail.com" class="cta-button">
-                    <i class="fa-solid fa-walkie-talkie"></i> ¡Solicita una cotización ahora!
-                </a>
-            </div>
             <p>Horario: 11 AM - 8 PM de Lunes a Sábado</p>
             <p>Domingo: Previa cita</p>
         </div>
