--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
    <!-- Sección de Servicios -->
 <section id="servicios" class="servicios">
     <div class="container">
-        <h2>Nuestros Servicios</h2>
+        <h2>Los servicios que ofrezco</h2>
         <div class="grid">
             <div class="card">
                 <div class="card-image"></div>
@@ -128,16 +128,17 @@
         <div class="container">
             <h2><i class="fa-solid fa-address-book"></i> Contacto</h2>
             <ul class="contact-info">
-                <a href="https://wa.me/529993553257" target="_blank">
+                <a href="https://wa.me/529993553257" target="_blank" style="text-decoration: none;">
                     <li class="contact-item">
                         <img src="recursos/whats.png" alt="WhatsApp" class="whatsapp-icon">
                         WhatsApp
                     </li>
                 </a>
-                <a href="tel:+529993553257" class="cta-call-button">
+                <a href="tel:+529993553257" class="cta-call-button" style="text-decoration: none;">
                     <i class="fa-solid fa-phone"></i> ¡Llamar Ahora y agenda tu cita ahora!
                 </a>
             </ul>
+            
             <p>Horario: 11 AM - 8 PM de Lunes a Sábado</p>
             <p>Domingo: Previa cita</p>
         </div>
