--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
    <!-- Sección de Servicios -->
 <section id="servicios" class="servicios">
     <div class="container">
-        <h2>Los servicios que ofrezco</h2>
+        <h2>Algunos servicios que ofrezco</h2>
         <div class="grid">
             <div class="card">
                 <div class="card-image"></div>
